# AED-schedules

./: .gitignore  AED2324_PRJ1_G56  CMakeLists.txt  ClassUC.cpp  ClassUC.h  README.md  SlotH.cpp  Student.cpp  Student.h  Uc.cpp  Uc.h  class.cpp  class.h  classUc.cpp  classUc.h  course.cpp  course.h  file.cpp  file.h  lesson.cpp  lesson.h  main.cpp  menu.cpp  menu.h  slotH.cpp  slotH.h  stdafx.h  student.cpp  student.h  uc.cpp  uc.h
docs/: Doxyfile
files/: history.csv
src/: Consult.cpp  Consult.h  Dataset.cpp  Dataset.h  Lesson.cpp  Lesson.h  Menu.cpp  Menu.h  Request.cpp  Request.h  Student.cpp  Student.h  UcClass.cpp  UcClass.h  class.h  csvReader.cpp  csvReader.h  dataset.cpp  dataset.h  lesson.h  main.cpp  menu.cpp  menu.h  stdafx.h  student.h  uc.h
